<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:descendantFocusability="blocksDescendants">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/music_type_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="4dp"
            style="@style/cardViewStyle"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/album_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:background="#58BCBB"
                    android:textColor="@color/white"
                    android:text="@string/albumOf"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_image"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            style="@style/cardViewStyle"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:background="#58BCBB"
                    android:textColor="@color/white"
                    android:text="@string/rollSong"/>

                <FrameLayout
                    android:id="@+id/roll_music_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RelativeLayout
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.test.zhangtao.activitytest.widget.DrawCenterTextView
                        android:id="@+id/get_more_roll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/moreSong"
                        android:drawableRight="@drawable/tonext"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            style="@style/cardViewStyle"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:background="#58BCBB"
                    android:textColor="@color/white"
                    android:text="@string/folksong"/>

                <FrameLayout
                    android:id="@+id/folk_music_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.test.zhangtao.activitytest.widget.DrawCenterTextView
                        android:id="@+id/get_more_folk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_centerInParent="true"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/moreSong"
                        android:drawableRight="@drawable/tonext"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
